Harden server persistence and runtime lifecycle